--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,6 +12,7 @@
 .mt20{margin-top: 20px!important;}.mb20{margin-bottom: 20px!important;}
 .mt25{margin-top: 25px!important;}.mb25{margin-bottom: 25px!important;}
 .mt30{margin-top: 30px!important;}.mb30{margin-bottom: 30px!important;}
+.mt40{margin-top: 40px!important;}.mb40{margin-bottom: 40px!important;}
 input,select{
   border-radius:3px!important;
   box-shadow: none!important;
@@ -22,6 +23,11 @@ input,select{
   -o-border-radius:3px!important;
   height: 38px;
 }
+.form-switch .form-check-input{
+   border-radius:2em!important; -webkit-border-radius:2em!important; -moz-border-radius:2em!important; -ms-border-radius:2em!important; -o-border-radius:2em!important; 
+   width: 2.8em!important;
+   height: 24px!important;
+  }
 input:hover,input:focus,select:focus,select:hover{border-color: #FECA40!important;}
 .required{
   position: relative;
@@ -125,8 +131,8 @@ body {
   background-position: left 10px center;
   padding-left: 34px;
 }
-.userico{background-image: url('/assets/images/icon/user.png');}
-.pwdico{background-image: url('/assets/images/icon/pwd.png');}
+.userico{background-image: url('../images/icon/user.png');}
+.pwdico{background-image: url('../images/icon/pwd.png');}
 .btnekomn,.btnekomn:hover{
   box-shadow: none;
   border-color: var(--primary-border);
@@ -153,13 +159,22 @@ body {
 .btn-login{height: 38px;}
 .brand-logo{
   margin-bottom: 45px;
+  text-align: center;
 }
 .brand-logo img{
   width: 100%;
   max-width: 164px;
 }
+.SellerText{
+  font-weight: bold;
+  margin-left: 9px;
+  font-size: 22px;
+  padding-top: 10px;
+  opacity: 0.25;
+  word-spacing: 0.0rem;
+}
 .ssologin,.ssologin:hover{
-  background-image: url('/assets/images/icon/google.png');
+  background-image: url('../images/icon/google.png');
   border: 1px solid #eee2e6;
   text-align: left;
   background-repeat: no-repeat;
@@ -217,6 +232,7 @@ body {
   box-sizing:border-box;
   overflow: hidden;
   overflow-y: auto;
+  z-index: 100;
 }
 .loginForm{
   min-height: calc(100vh - 50px);
@@ -253,7 +269,7 @@ body {
 .ExcellenText {
   margin-bottom: 5px;
 }     
-.section_2,.section_3,.section_4{
+.sup_section_2,.sup_section_3,.sup_section_4{
   display: none;
   transform: translateX(100%);
   transition: transform 0.5s ease-in-out;
@@ -295,9 +311,24 @@ body {
 .categoryList > li {
   width: 33.33%;
   min-width: 140px;
-  margin: 6px 0px 3px 0px;
+  margin: 6px 0px 0px 0px;
 }
 /* #0E2332 */
+.chooseoneinput{position: relative;}
+.chooseone{
+  position: absolute;
+  left: calc(50% - 10px);
+  font-size: 14px;
+  width: 20px;
+  padding: 0px;
+  display: flex;
+  height: 38px;
+  align-items: center;
+  justify-content: center;
+  font-style: italic;
+  opacity: 0.5;
+}
+.ek_round{ border-radius:24px!important ; -webkit-border-radius:24px!important ; -moz-border-radius:24px!important ; -ms-border-radius:24px!important ; -o-border-radius:24px!important ; }
 .thankYoubox {
   padding: 50px 30px;
   text-align: center;
@@ -407,3 +438,533 @@ body {
   .login-wrapper{padding-right: 0px;}
   #carouselExampleFade{display: none;}
 }
+
+/* Pricing page */
+.pricing-block .inner-box {
+  position: relative;
+  background-color: #ffffff;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.08);
+  padding: 0 0 0px;
+  max-width: 100%;
+  margin: 0 auto;
+  border-bottom: 15px solid #40cbb4;
+  border-radius: 10px;
+  padding-bottom: 20px;
+  overflow: hidden;
+}
+.pricing-block .icon-box {
+  position: relative;
+  padding: 40px 30px 0;
+  background-color: #40cbb4;
+  text-align: center;
+}  
+.pricing-block .icon-box:before {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 75px;
+  width: 100%;
+  border-radius: 50% 50% 0 0;
+  background-color: #ffffff;
+  content: "";
+}
+.pricing-block .icon-box .icon-outer {
+  position: relative;
+  height: 120px;
+  width: 120px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  margin: 0 auto;
+  padding: 10px;
+}
+.pricing-block .icon-box i {
+  position: relative;
+  display: block;
+  height: 100px;
+  width: 100px;
+  line-height: 90px;
+  border: 5px solid #40cbb4;
+  border-radius: 50%;
+  font-size: 50px;
+  color: #40cbb4;
+  -webkit-transition: all 600ms ease;
+  -ms-transition: all 600ms ease;
+  -o-transition: all 600ms ease;
+  -moz-transition: all 600ms ease;
+  transition: all 600ms ease;
+}
+.pricing-block .inner-box:hover .icon-box i {transform: rotate(360deg);}
+.pricing-block .price-box {
+  position: relative;
+  text-align: center;
+  padding: 1px 20px;
+}
+.pricing-block .title {
+  position: relative;
+  display: block;
+  font-size: 20px;
+  line-height: 1.2em;
+  color: #222222;
+  font-weight: 600;
+}
+.pricing-block .price {
+  display: block;
+  font-size: 24px;
+  color: #222222;
+  font-weight: 700;
+  color: #40cbb4;
+}
+.pricing-block .features {position: relative;padding: 0px 15px;}
+.pricing-block .features li {
+  position: relative;
+  display: block;
+  font-size: 14px;
+  line-height: 18px;
+  color: #848484;
+  font-weight: 500;
+  padding: 8px 0;
+  padding-left: 30px;
+  border-bottom: 1px dashed #dddddd;
+}
+.pricing-block .features li:before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  font-size: 16px;
+  color: #2bd40f;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  content: "\f058";
+  font-family: "Font Awesome 5 Free";
+  margin-top: -8px;
+}
+.pricing-block .features li.false:before {color: #e1137b;content: "\f057";}
+.pricing-block .features li a {color: #848484;}
+.pricing-block .features li:last-child {border-bottom: 0;}
+.pricing-block .btn-box {position: relative;text-align: center;}
+.pricing-block .btn-box a {
+  position: relative;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
+  font-weight: 500;
+  padding: 8px 30px;
+  background-color: #40cbb4;
+  border-radius: 10px;
+  border-top: 2px solid transparent;
+  border-bottom: 2px solid transparent;
+  -webkit-transition: all 400ms ease;
+  -moz-transition: all 400ms ease;
+  -ms-transition: all 400ms ease;
+  -o-transition: all 400ms ease;
+  transition: all 300ms ease;
+}
+.pricing-block .btn-box a:hover {color: #ffffff;}
+.pricing-block .inner-box:hover .btn-box a {
+  color: #40cbb4;
+  background: none;
+  border-radius: 0px;
+  border-color: #40cbb4;
+}
+.pricing-block:nth-child(3) .icon-box i,
+.pricing-block:nth-child(3) .inner-box {
+  border-color: #FECA40;
+}
+.pricing-block:nth-child(3) .btn-box a,
+.pricing-block:nth-child(3) .icon-box {
+  background-color: #FECA40;
+}
+.pricing-block:nth-child(3) .icon-box i,
+.pricing-block:nth-child(3) .price {
+  color: #FECA40;
+}
+.pricing-block:nth-child(3) .inner-box:hover .btn-box a {
+  color: #FECA40;
+  background: none;
+  border-radius: 0px;
+  border-color: #FECA40;
+}
+.promise_list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 30px;
+  font-size: 18px;
+  justify-content: center;
+  font-weight: bold;
+  margin-top: 6px;
+}
+.sec__h{padding: 15px 15px 30px 15px;}
+.fullbodyclose{
+  position: relative;
+}
+.fullbodyclose .btn-close{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+/* end Pricing */
+
+
+
+/* ----pricing---- */
+.AmazonSeller{
+  font-size: 18px;
+  margin-top: 50px;
+  font-weight: bold;
+}
+.pricing-container{
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.features-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.feature-row{
+  display: flex;
+  width: 100%;
+  padding: 11px;
+  line-height: 100%;
+  border-radius: 16px;
+}
+.feature-row:nth-child(odd) {
+  background-color: #f4f4f4;
+}
+.features-list.priceList .feature-row:nth-child(odd) {
+  background-color: transparent;
+}
+.features-list.priceList .feature-row{
+  padding: 0px;
+  position: relative;
+  top: 25px;
+}
+.feature {
+  flex: 1.5;
+  padding: 0px 8px;
+  font-weight: 500;
+}
+.feature-value {
+  flex: 1;
+  text-align: center;
+  padding: 0px 10px;
+}
+.plan_details{
+  border: 1px solid #ddd;
+  display: block;
+  padding: 20px 15px;
+  border-radius: 8px;
+  cursor: pointer;
+  box-sizing: border-box;
+  height: 164px;
+  background-color: #fff;
+}
+.plan_details h2{
+  font-size: 23px;
+  font-weight: bold;
+  margin: 0px;
+  line-height: 28px;
+}
+.plan_details .price{
+  font-size: 16px;
+  padding: 16px 0px;
+  opacity: 0.75;
+}
+.subscribebtn{
+  height: 34px;
+  padding: 0px 15px;
+  margin: 7px 0px;
+  border-radius: 5px;
+  color: #343D3A!important;
+}
+.plan_details.active {
+  border-color: #343D3A;
+  color: #fff;
+  background-color: #343D3A;
+  border-color: #343D3A;
+  color: #fff;
+}
+.plan_details.bestplan{
+  height: 212px;
+  position: relative;
+  top: -48px;
+  padding-top: 54px;
+  
+}
+.plan_details.bestplan.active{
+  background-color: #343D3A;
+  border-color: #343D3A;
+  color: #fff;
+}
+.plan_details.bestplan.active .bestplanText{
+  background-color: #FECA40;
+  color: #343D3A;
+}
+.plan_details.active h2{color: #fff!important;}
+.bestplanText{
+  background-color: #343D3A;
+  color: #FECA40;
+  display: flex;
+  position: absolute;
+  width: calc(100% - 44px);
+  height: 28px;
+  border-radius: 24px;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -14px;
+}
+.defaulPlan{
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.SelectFeatures{
+  height: 164px;
+  position: relative;
+  padding: 20px 34px 0px 4px;
+}
+.SelectFeatures::after{
+  content: '';
+  height: 100%;
+  width: 1px;
+  background-color: #e0fbf0;
+  position: absolute;
+  right: 8px;
+  top: 0;
+}
+.SelectFeature{
+  margin-top: 30px;
+}
+.SelectFeature select{
+  border-radius: 24px!important;
+  background-color: #fafafa;
+  margin-top: 5px;
+  height: 34px;
+  padding-left: 20px;
+}
+/* end pricing */
+
+/* dashboard */
+.ek_db{background-color: #F5F5F9;}
+.ek_nav{
+  width: 250px;
+  background-color: #363740;
+  z-index: 1040;
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  right: auto;
+  overflow: hidden;
+  -webkit-transition: -webkit-transform 400ms cubic-bezier(0.05, 0.74, 0.27, 0.99);
+  -moz-transition: -moz-transform 400ms cubic-bezier(0.05, 0.74, 0.27, 0.99);
+  -o-transition: -o-transform 400ms cubic-bezier(0.05, 0.74, 0.27, 0.99);
+  transition: transform 400ms cubic-bezier(0.05, 0.74, 0.27, 0.99);
+}
+.ekheader{
+  height: 58px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 10px 15px 8px 265px;
+  z-index: 1000;
+  background-color: #fff;
+  border-bottom: 1px solid rgba(224, 224, 224, 0.7);
+}
+.ek_dashboard{padding: 73px 15px 15px 265px;}
+.profile {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
+  cursor: pointer;
+  text-align: end;
+}
+.profile h3 {
+  text-align: end;
+  line-height: 1;
+  margin-bottom: 4px;
+  font-weight: 600;
+}
+.profile p {
+  line-height: 18px;
+  font-size: 14px;
+  opacity: .6;
+}
+.profile .img-box {
+  position: relative;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.profile .img-box img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.user h4{
+  font-size: 15px;
+  font-weight: bold;
+  margin: 0px;
+}
+.brandLogo_d img{
+  max-height: 40px;
+  position: relative;
+  top: -2px;
+}
+.sidebar-header{
+  display: block;
+  height: 58px;
+  line-height: 58px;
+  background-color: #272b35;
+  color: #fff;
+  width: 100%;
+  padding: 0px 15px;
+}
+.sidebar-header img{
+  filter: invert(100%);
+  position: relative;
+  top: -3px;
+}
+.sidebar-menu {
+  height: calc(100% - 58px);
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  overflow-y: auto;
+}
+.sidebar-menu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.sidebar-menu ul li a.nav-link{
+  color: #b0b7c3;
+  text-decoration: none;
+  display: block;
+  padding: 14px 15px;
+  font-size: 15px;
+  transition: background-color 0.3s, color 0.3s;
+  border-left: 3px solid transparent;
+  line-height: 18px;
+}
+.sidebar-menu ul li a.nav-link .menuIcon{
+  width: 24px;
+  text-align: center;
+  transform: scale(1.1);
+  margin-right: 10px;
+  position: relative;
+  top: 0.5px;
+}
+.sidebar-menu ul li a.nav-link:hover {
+  background-color: #3c434f;
+  color: #fff;
+  border-left-color: #6c757d;
+}
+.sidebar-menu ul li a.nav-link.active {
+  background-color: #3c434f;
+  color: #fff;
+  border-left-color:#ffffff;
+}
+.sidebar-menu .nav-link.nav-link-arrow{position: relative;}
+.sidebar-menu .nav-link.nav-link-arrow .menu_arrowIcon{
+  width: 20px;
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin-top: 1px;
+  transform: translateY(-50%);
+}
+.sidebar-menu .nav-link.nav-link-arrow .menu_arrowIcon i{transition: transform 0.3s;}
+.nav-link.nav-link-arrow[aria-expanded="true"] .menu_arrowIcon i{transform: rotate(90deg);}
+.sidebar-menu ul.sidenav-second-level{
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.sidebar-menu ul.sidenav-second-level li a.nav-link{
+  position: relative;
+  padding-left: 50px;
+  display: block;
+}
+.sidebar-menu ul.sidenav-second-level li a.nav-link::after{
+  content: '';
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #b0b7c3;
+  position: absolute;
+  left: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.sidebar-menu ul.sidenav-second-level li a.nav-link:hover,.sidebar-menu ul.sidenav-second-level li a.nav-link.active {
+  background-color: transparent;
+  color: #fff;
+  border-left-color: transparent;
+}
+.sidebar-menu ul.sidenav-second-level li a.nav-link.active::after{background-color: #fff;}
+.menutoggle{
+  width: 58px;
+  height: 58px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 26px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  cursor: pointer;
+  z-index: 1001;
+}
+.ekdropdown{
+  border-radius: 4px!important;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	box-sizing: border-box;
+	border-top: 1px solid #ddd!important;
+  margin-top: 8px!important;
+  box-sizing: border-box;
+}
+.w_200{width: 200px;}
+.ekdropdown::after {
+	content: "";
+	position: absolute;
+	top: -6px;
+	width: 11px;
+  height: 11px;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  transform: rotate(-45deg);
+  background-color: #fff;
+  z-index: inherit;
+}
+.dropdown-menu-end.ekdropdown::after{right: 13px;}
+.ekdropdown .dropdown-item{
+  padding: 8px 16px!important;
+  font-size: 15px;
+  font-weight: normal;
+}
+@media(max-width:1080px){
+  .ek_nav{left: -250px;height: calc(100% - 57px); top: 57px;transition: 300ms;}
+  .ek_dashboard{padding-left: 15px;}
+  .ekheader{padding-left: 60px;}
+  .ek_nav.active{left: 0px;}
+  .sidebar-header,.brandLogo_d{display: none;}
+}
+/* end dashboard */
