resolve sorting issue

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -109,6 +109,7 @@ input:hover,input:focus,select:focus,select:hover,textarea:hover,textarea:focus{
   --primary-background:#FECA40;
   --primary-border:#FECA40;
   --white-text: #ffffff;
+  --dark-text-color: #131A22;
 }
 .a_color,.a_color:hover{color: #FECA40!important;}
 .text_u{text-decoration: none!important;}
@@ -1219,6 +1220,18 @@ opacity: 0.5;
   top: 58px!important;
   z-index: 100;
 }
+
+th.h_sorting.active i{
+  color: var(--dark-text-color)!important;
+}
+th.h_sorting.active.asc i.fa-caret-down{
+  visibility: hidden;
+  
+}
+th.h_sorting.active.desc i.fa-caret-up{
+  visibility: hidden;
+  
+}
 .normalTable.whitespace thead tr th{white-space: nowrap;}
 .normalTable thead tr th{
   padding: 12px 13px!important;
@@ -1305,16 +1318,15 @@ opacity: 0.5;
 
 /* inventory */
 .productImg_t{
-  width: 44px;
-  height: 44px;
+  width: 64px;
+  height: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #f5f5f5;
   background-color: #fff;
   border-radius: 3px;
-  padding: 2px;
 }
 .productImg_t img {
   max-width: 100%;
