--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -37,3 +37,68 @@
   .uploadContainer{
     width: 450px !important;
   }
+
+  #popupDialog {
+    width: 90%;
+    max-width: 600px; /* Sets a max width for larger screens */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    display: none;
+    z-index: 1001;
+    max-height: 80vh; /* Adjusts height relative to viewport */
+    overflow-y: auto;
+    border-radius: 8px; /* Added for better aesthetics */
+    
+  }
+  
+  
+  /* Media queries for responsiveness */
+  @media (min-width: 600px) {
+    #popupDialog {
+      width: 70%;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    #popupDialog {
+      width: 60%;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    #popupDialog {
+      width: 50%;
+    }
+  }
+  
+  .popup-btn{
+    float: right;
+  }
+  
+  
+  /* Media queries for responsiveness */
+  @media (min-width: 600px) {
+    #popupDialog {
+      width: 70%;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    #popupDialog {
+      width: 60%;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    #popupDialog {
+      width: 50%;
+    }
+  }
+  .payInvoiceTable {
+    width: 100%;
+  }
