upadte index page

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,5 +1,13 @@
 /* bulk uplaod list css popup  */
 
+/* table paginataion backgorund color */
+/* .pager_ a:hover, .pager_ a.active {
+  background-color: #feca40;
+  color: #fff;
+  border-color: #feca40;
+} */
+
+
 .popup-button{
     /* color: #feca40; */
       background: none;
