--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -111,6 +111,24 @@
     width: 100%;
   }
 
+/* keyword close tag icon css this x */
+.tag span {margin-right: 5px;}
+.tag .remove-tag {
+  cursor: pointer;
+  font-weight: bold;
+  color: #888;
+  position: relative;
+  right: -3px;
+  top: -1px;
+}
+
+.remove-tag::after {
+  content: '\00d7'; /* Unicode for '×' */
+  font-size: 16px;
+  font-weight: bold;
+  color: #888;
+  cursor: pointer;
+}
 
 
 
