--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,10 +18,10 @@
   --footer-text-color: #999999;
   --footer-link-hover: #eeeeee;
 }
-::-webkit-input-placeholder {color:#ccc!important;}
-::-moz-placeholder {color:#ccc!important;}
-::-ms-input-placeholder {color:#ccc!important;}
-::placeholder {color:#ccc!important;}
+::-webkit-input-placeholder {color:#9f9f9f!important;}
+::-moz-placeholder {color:#9f9f9f!important;}
+::-ms-input-placeholder {color:#9f9f9f!important;}
+::placeholder {color:#9f9f9f!important;}
 .fs-13{font-size: 13px!important;}
 .fs-14{font-size: 14px!important;}
 .fs-15{font-size: 15px!important;}
@@ -148,6 +148,9 @@ input:hover,input:focus,select:focus,select:hover,textarea:hover,textarea:focus{
 .form-check-input[type="radio"] {
   border-radius: 50% !important;
 }
+.form-check{
+  min-height: 16px;
+}
 .form-select{
   /* color: #999!important; */
   padding-top: 3px;
@@ -229,6 +232,10 @@ body {
 }
 .userico{background-image: url('../images/icon/user.png');}
 .pwdico{background-image: url('../images/icon/pwd.png');}
+.btnekomn-border.downborder,.btnekomn-border.downborder:hover,
+.btnekomn-border.downborder:focus,.btnekomn-border.downborder:visited{
+  width: 100px!important; padding-top: 4px!important;height: 36px;
+}
 .btnekomn-border,.btnekomn-border:hover,.btnekomn-border:focus,.btnekomn-border:visited {
   width: 160px;
   height: 38px;
@@ -903,12 +910,22 @@ body {
   z-index: 1000;
   background-color: #fff;
   border-bottom: 1px solid rgba(224, 224, 224, 0.7);
+  transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
 }
 .ek_dashboard{
   padding: 73px 15px 15px 265px;
   min-height: calc(100vh - 20px);
   box-sizing: border-box;
   position: relative;
+  transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
 }
 .ek_dashboard .ek_db_footer{
   height: 40px;
@@ -923,6 +940,11 @@ body {
   padding-left: 250px;
   text-align: center;
   font-size: 0.85rem;
+  transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
 }
 .profile {
   position: relative;
@@ -1372,9 +1394,9 @@ opacity: 0.5;
   transition: background-color 0.3s, color 0.3s;
 }
 .pager_ a:hover, .pager_ a.active {
-  background-color: #feca40;
+  background-color: #007bff;
   color: #fff;
-  border-color: #feca40;
+  border-color: #007bff;
 }
 .pager_btn:disabled {cursor: not-allowed;color: #ddd;}
 .jumper{padding-left: 10px;color: #808080;font-size: 15px;}
@@ -1391,8 +1413,8 @@ opacity: 0.5;
 
 /* inventory */
 .productImg_t{
-  width: 44px;
-  height: 44px;
+  width: 48px;
+  height: 48px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1400,7 +1422,7 @@ opacity: 0.5;
   border: 1px solid #e5e5e5;
   background-color: #fff;
   border-radius: 3px;
-  padding: 2px;
+  padding: 0px;
 }
 .productImg_t img {
   max-width: 100%;
@@ -1408,13 +1430,40 @@ opacity: 0.5;
   width: auto;
   height: auto;
 }
-.productTitle_t{
-  min-width: 150px;
-  font-weight: 600;
-  max-width: 150px;
+.productTitle_t {
+  min-width: 200px;
+  max-width: 200px;
+  font-weight: 500;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: normal;
   word-wrap: break-word;
+  position: relative;
 }
+.productTitle_t:hover::after {
+  content: attr(title);
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 5px;
+  width: 100%;
+  white-space: normal;
+  word-wrap: break-word;
+  z-index: 10;
+  left: 0;
+  top: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: block;
+}
+#dataContainer .fas.fa-rupee-sign{
+  position: relative;top: -1px;font-size: 12px!important;margin-right: 2px; opacity: 0.8;
+}
+
+
+
 input.stock_t.h_30,.changeStatus_t.form-select.h_30{height: 30px!important;background-position: right 6px top 9px;}
 input.stock_t.h_32,.changeStatus_t.form-select.h_32{height: 32px!important;background-position: right 6px top 10px;}
 input.stock_t.h_34,.changeStatus_t.form-select.h_34{height: 34px!important;background-position: right 6px top 12px;}
@@ -1654,6 +1703,11 @@ select.smallInput_n{text-align: left;}
   overflow: hidden;
 }
 .video-container{padding: 0px;}
+.video-container.bulkuploadvideo{
+  width: 150px;
+  height: 150px;
+  margin-left: 30px;
+}
 .placeholdertext,.video-placeholder{
   position: absolute;
   width: calc(100% - 2px);
@@ -1792,7 +1846,7 @@ video {
   list-style-type: none;
 }
 .checkpoint li{
-  padding: 5px 10px 5px 18px;
+  padding: 5px 5px 5px 18px;
   position: relative;
 }
 .checkpoint li::before{
@@ -2458,6 +2512,70 @@ textarea.resizer_none{resize:none!important;}
 /* ---end radio---- */
 
 
+/* ---------- Query Radio ------------ */
+.queryRadioBox{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.radioLookBtn {
+  width: calc(50% - 8px);
+  position: relative;
+  background-color: #ddd !important;
+  border-radius: 3px !important;
+  overflow: hidden !important;
+  display: flex;
+  align-items: center;
+  height: auto;
+}
+.radioLookBtn input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.radioLookBtn label {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-grow: 1;
+  padding: 10px 10px 10px 40px;
+  border: 1px solid #9f9f9f;
+  box-sizing: border-box;
+  cursor: pointer;
+  margin-bottom: 0 !important;
+  border-radius: 3px !important;
+  overflow: hidden !important;
+  transition: background-color 0.3s;
+  min-height: 42px;
+  height: 100%;
+  word-break: break-word;
+}
+.radioLookBtn label::before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  border: 2px solid #999;
+  border-radius: 50%;
+  margin-right: 10px;
+  transition: border-color 0.3s, background-color 0.3s;
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.radioLookBtn input[type="radio"]:checked + label {
+  border-color: var(--primary-border);
+}
+.radioLookBtn input[type="radio"]:checked + label::before {
+  border-color: var(--primary-border);
+  background-color: var(--primary-border);
+  box-shadow: inset 0 0 0 4px #fff;
+}
+/* --end-- */
+
+
 /* ----Breadcrumb--- */
 .ekbreadcrumb{
   list-style-type: none;
@@ -2937,6 +3055,10 @@ img._pdimg {
 .carousel-button:disabled{cursor: not-allowed;}
 /* -- end image carousel -- */
 .doyouinput{margin-top: 20px;}
+
+
+
+
 .eKomn_commitment{
   padding-top: 20px;
    background-position: top center;
@@ -3093,6 +3215,255 @@ img._pdimg {
   display: none;
 }
 .bodyOverlay.active{display: block;}
+
+
+/* -----contact us ------------ */
+.contImg{
+  background-color: #131A22;
+  position: relative;
+  overflow: hidden;
+} 
+.contImg::after {
+  content: "";
+  width: 300px;
+  height: 300px;
+  background-color: #9F8131;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -100px;
+  right: -100px;
+  opacity: 0.6;
+}
+.contImg::before {
+  content: '';
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: rgba(159, 129, 49, 0.4);
+  position: absolute;
+  right: 50px;
+  top: -50px;
+  z-index: 1;
+}
+.ekContactInfo {
+  position: relative;
+  z-index: 2;
+  padding: 45px;
+  padding-top: 33px;
+}
+.ekContactInfo h3{
+  color: #fff!important;
+  margin-bottom: 35px;
+  font-size: 26px;
+}
+.socialLinks.bigSize {
+  display: flex;
+  column-gap: 15px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.socialLinks.bigSize a{
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  color: #9F8131;
+}
+.infoCenter {
+  background-color: rgba(255,255,255,0.1);
+  border-radius: 4px;
+  padding: 26px;
+  padding-left: 76px;
+  margin-bottom: 35px;
+  transition: all 0.3s ease;
+  position: relative;
+}
+.infoCenter .icon {
+  font-size: 30px;
+  color: #9F8131;
+  position: absolute;
+  top: 28px;
+  left: 28px;
+}
+.infoCenter h4 {
+  margin-bottom: 6px;
+  text-transform: uppercase;
+  color: #fff !important;
+  line-height: 100%;
+}
+.infoCenter a ,.infoCenter p{
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s ease;
+  color: #ccc !important;
+  margin: 0;
+}
+.infoCenter a:hover {color: #9F8131 !important;}
+.contact-section{
+  background-image: url('../images/icon/Contact-us-background.jpg');
+  background-size: 100% 100%;
+  position: relative;
+  padding: 50px 0px;
+  background-repeat: no-repeat;
+}
+.contactForm {
+  padding: 30px 50px;
+  position: relative;
+  z-index: 2;
+}
+.contactForm h2 {
+  margin: 0px;
+  margin-bottom: 40px;
+  position: relative;
+  font-size: 24px;
+  font-weight: bold;
+}
+.contactForm h2::after{
+  content: "";
+  height: 3px;
+  width: 90px;
+  background-color: var(--primary-background);
+  position: absolute;
+  bottom: -8px;
+  left: 2px;
+}
+.contContainer{
+  background-color: rgba(0,0,0,0.3);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.conover{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0px;
+  top: 0;
+  background-color: rgba(0,0,0,0.1);
+  z-index: 1;
+}
+.contactForm input.form-control{height: 42px;}
+.contactForm input.form-control,.contactForm textarea.form-control{
+  border: 1px solid #999;
+  background-color: #eee!important;
+}
+.contactForm .form-group {
+  margin-bottom: 26px;
+}
+/* --end contact us--- */
+
+
+/* ----------FAQ Section ------------- */
+.faq-section {padding: 60px 0;background-color: #fff;}
+.faq-title {text-align: center;margin-bottom: 40px;}
+.faq-item {
+  background-color: #fdfdfd;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  overflow: hidden;
+}
+.faq-question {
+  padding: 12px 20px;
+  cursor: pointer;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: background-color 0.3s ease;
+}
+.faq-question:hover,.faq-item.active .faq-question{background-color: #f0f0f0;}
+.faq-question::after {
+  content: '+';
+  font-size: 20px;
+  color: var(--secondary-background);
+}
+.faq-answer {
+  padding: 0 20px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease, padding 0.3s ease;
+}
+.faq-item.active .faq-question::after {content: '-';}
+.faq-item.active .faq-answer {
+  max-height: 300px;
+  padding: 20px;
+}
+.faqImg img{max-width: 100%;}
+/* --end faq--- */
+
+
+/* --------EK Advantage --------- */
+.advstep{margin-bottom: 40px;}
+.advstep:last-child{margin-bottom: 20px;}
+.advstephead{
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.advhimg{
+  width: 74px;
+  height: 74px;
+  border: 2px solid #E5E5E5;
+  border-radius: 50%;
+  box-sizing: border-box;
+  padding: 12px;
+  margin-right: 20px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.advhimg img{width: 100%;object-fit: contain;}
+.advstep .checkpoint li::before {
+  content: '';
+  width: 8px;
+  height: 15px;
+  border-right: 2px solid var(--text-color);
+  border-bottom: 2px solid var(--text-color);
+  transform: rotate(45deg);
+  position: absolute;
+  left: 0px;
+  top: 5px;
+  border-radius: 0px 0px 3px;
+}
+.advstep .checkpoint li {padding: 1px 10px 1px 20px;position: relative;}
+.advantage{
+  max-width: 600px;
+  margin-left: auto;
+  padding-right: 80px;
+}
+.advantage img{max-width: 340px;}
+.separator {
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, transparent, #ccc, transparent); 
+  margin: 20px 0;
+}
+.advantagecontent{position: relative;padding-left: 40px;}
+.advantagecontent::after{
+  content: '';
+  height: 100%;
+  width: 2px;
+  background: linear-gradient(to bottom, transparent, #ccc, transparent);
+  position: absolute;
+  left: -20px;
+  top: 10px;
+}
+.adv-section{padding: 60px 0px; background-color: #fff;}
+.commit-section{padding: 60px 0px;}
+.commstephead{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+}
+.commstephead .advhimg{
+  background-color: var(--primary-border);
+  border-color: var(--primary-border);
+}
+/* end ekvantage */
+
+
 /* ------mobile menu------------ */
 .mobileMenuInner{width: 100%;height: calc(100vh - 60px);}
 .mob_head{
@@ -3152,6 +3523,86 @@ img._pdimg {
 .mobileMenu .sidebar-menu{height: 100%!important;}
 /* end mobile menu */
 
+/* ------------------------------------------------------------ */
+.sidebar-header{
+  position: relative;
+}
+.collapseIcon{
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  background-color: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  right: 13px;
+  top: 13px;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 18px;
+  color: #999;
+}
+.collapseIcon:hover{color: #fff;}
+.ek_db.collapseNav .collapseIcon{
+  right: 19px;
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+}
+.ek_nav {
+  width: 250px;
+  transition: width 500ms ease;
+}
+.ek_db.collapseNav .ek_nav {
+  width: 65px;
+}
+.ek_db.collapseNav .nav-link-text ,
+.ek_db.collapseNav .menu_arrowIcon,
+.ek_db.collapseNav .sidebar-header img{
+  display: none!important;
+}
+.ek_db.collapseNav .ekheader,.ek_db.collapseNav .ek_dashboard{
+  padding-left: 80px;
+  transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+}
+*{
+  scrollbar-width: thin;
+  /* scrollbar-color: rgba(255,255,255,0.2) var(--secondary-background); */
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  /* background: var(--secondary-background); */
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255,255,255,0.2);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255,255,255,0.2);
+}
+.sidebar-menu ul li a.nav-link{white-space: nowrap;}
+/* ------------ */
+
+/* --------Ekomn fixing-------- */
+.normalTable tbody tr td .wordbreak{
+  word-break: break-all!important;
+  white-space: normal!important;
+}
+.pointereventnone{
+  pointer-events: none!important;
+}
+.form-check.min-height{
+  min-height: 1px!important;
+}
+/* --end-- */
+
 @media (max-width: 1024px) {
   .barIcon,.topSection_w_cat{display: block;}
   .productFilters,.brandLogo,.notificationDropdown,
@@ -3173,12 +3624,7 @@ img._pdimg {
   .main_header{padding-left: 50px;}
   .userAction{margin-left: 10px;}
   .userDropdown{margin-left: 10px;}
-  .b_h_list,.ekom_tab{
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    overflow-x: auto;
-  }
+  .b_h_list,.ekom_tab{display: block;white-space: nowrap;overflow: hidden;overflow-x: auto;}
   .b_h_list > li,.ekom_tab > li{display: inline-block;white-space: nowrap;}
   .det_btnbox{max-width: 100%;}
   .doyouinput{margin-top: 10px;}
@@ -3188,6 +3634,11 @@ img._pdimg {
   .copyrightText{text-align: center;margin-bottom: 20px;}
   .socialLinks{margin: auto;}
   .eKomonsummary p{margin-bottom: 10px!important;}
+  .adv-section,.commit-section{padding: 40px 0px;}
+  .advantagecontent{padding-left: 0px;}
+  .advantage{padding-right: 0px;}
+  .mbspace{margin: 0px 0px 50px 0px !important; padding-top: 10px !important;}
+  .advantage img {max-width: 220px;display: block;margin: auto;}
 }
 @media(max-width:576px){
   .bulkBuing{max-width: 100%;}
@@ -3204,18 +3655,11 @@ img._pdimg {
   .clientWords{padding: 15px;}
   .testimonalBlock {padding: 15px 20px 40px 20px;}
   .unitext{margin-bottom: 75px;}
-}
-
-
-
-/* ---------------------------------------------------- */
-.normalTable tbody tr td .wordbreak{
-  word-break: break-all!important;
-  white-space: normal!important;
-}
-.pointereventnone{
-  pointer-events: none!important;
-}
-.form-check.min-height{
-  min-height: 1px!important;
+  .contact-section{padding: 0px;background-image: none;} 
+  .ekContactInfo,.contactForm{padding: 30px 15px;}
+  .ekContactInfo h3{margin-bottom: 20px;font-size: 22px;font-weight: bold;}
+  .infoCenter{padding: 20px;padding-left: 53px;margin-bottom: 15px;}
+  .infoCenter .icon {font-size: 24px;top: 22px;left: 18px;}
+  .contContainer{background-color: transparent;box-shadow: none;border-radius: 0px;}
+  .faq-section{padding: 40px 0px;}
 }
